--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2>Salada de Batata,Abacaxi,Atum e Nozes</h2>
     <p>Preparo: 20 min</br>Rendimento: 2 porções</p>
-        <img SRC="../trabalho/img/imagem.jpg"></br>
+       <img src="/" alt="C:\Users\Andrew\OneDrive\Área de Trabalho\Vs\img\carro.jpg">
         <h2>Igredientes</h2>
         <ul>
             <li>1 Abacaxi doce (cerca de 1,5Kg)</li>
